--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+playwright-report
+allure-results
+allure-report
+test-results
 
 # Runtime data
 pids
