--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {},
   "dependencies": {
+    "ajv": "^8.12.0",
     "allure-playwright": "^2.0.0",
     "dotenv": "^16.0.3"
   }
