--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.31.0"
-  },
-  "scripts": {},
-  "dependencies": {
+    "@playwright/test": "^1.31.0",
     "ajv": "^8.12.0",
     "allure-playwright": "^2.0.0",
     "dotenv": "^16.0.3"
-  }
+  },
+  "scripts": {},
+  "dependencies": {}
 }
