--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 CI=1
 
+ENV_NAME="Local"
+
+ALLURE_RESULTS_FOLDER="allure-results"
+
 BASE_URL="https://api.sampleapis.com" # API endpoint
 TEST_USER_EMAIL="some@gmail.com" # Some random user just for example
 TEST_USER_PASSWORD="some" # Some random password just for example
