--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-CI=1
+CI=1 # For playwright
 
-ENV_NAME="Local"
+ENV_NAME="Local" # Name of our env just for example, can be "Dev", "Staging" etc.
 
-ALLURE_RESULTS_FOLDER="allure-results"
+ALLURE_RESULTS_FOLDER="allure-results" # Folder where allure results are stored
 
 BASE_URL="https://api.sampleapis.com" # API endpoint
 TEST_USER_EMAIL="some@gmail.com" # Some random user just for example
